--- a/src/styles/global/typographie.css
+++ b/src/styles/global/typographie.css
@@ -29,11 +29,12 @@ h6 {
 }
 
 h1 {
-  font-size: clamp(3rem, 5vw, 3.5rem);
+  /* font-size: clamp(3rem, 5vw, 3.5rem); */
+  font-size: clamp(2rem, 4vw, 3.5rem);
 }
 
 h2 {
-  font-size: clamp(2rem, 3vw, 1.5rem);
+  font-size: clamp(1.5rem, 3vw, 2.5rem);
 }
 
 hr {
