--- a/src/styles/layouts/project.css
+++ b/src/styles/layouts/project.css
@@ -51,12 +51,12 @@ footer {
   width: var(--size-fluid-1);
   margin: auto;
   margin-bottom: var(--size-7);
-  & nav{
-    width:100%;
+  & nav {
+    width: 100%;
   }
   & a {
     font-family: var(--font-display);
-    font-size: 2rem;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     text-decoration: none;
     color: var(--clr-primary-12);
     max-width: 40%;
